--- a/BRButton.html
+++ b/BRButton.html
@@ -7,7 +7,7 @@
 		<link href="BRButton.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="button"><img id="button" src="images/button-up.png"></div>
+		<div class="button"><img id="button" src="images/button-up.png" height="600" width="800"></div>
 		<audio id="explaudio" src="sound/expl.mp3" autoplay="true"></audio>
 		<script src="BRButton.js"></script>
 	</body>
